test/error/PreEndifGarbage.fu
public static class Test
{
	public static bool Run()
	{
#if false
#else
		return true;
#endif foo //ERROR: Unexpected characters after '#endif'
	}
}
